--- a/Pixel/index.html
+++ b/Pixel/index.html
@@ -26,7 +26,7 @@
 		</div>
 	</div>
 	<script type="text/javascript" src="./Pixel.js"></script>
-	<script type="text/javascript" src="./canvas.js"></script>
+	<script type="text/javascript" src="./canvas.1.js"></script>
 </body>
 
 </html>
