--- a/Pixel/index.html
+++ b/Pixel/index.html
@@ -23,10 +23,14 @@
 				<label for="">画笔颜色</label>
 				<input style="padding: 0;" id="penColor" type="color" value="#000000">
 			</p>
+			<p>
+				<label for="">填充颜色</label>
+				<input style="padding: 0;" id="fillColor" type="color" value="#000000">
+			</p>
 		</div>
 	</div>
 	<script type="text/javascript" src="./Pixel.js"></script>
-	<script type="text/javascript" src="./canvas.1.js"></script>
+	<script type="text/javascript" src="./canvas.js"></script>
 </body>
 
 </html>
